crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__invalid_digit_in_hex_numeric_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"&#xZ\"####)"
---
[
    Token {
        data: "&#xZ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
