crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__lf_at_eof.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"\n\"####)"
---
[
    Token {
        data: "\n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
