crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__non_hyphen_permitted_slash.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<xr/>\"####)"
---
[
    Token {
        data: "xr",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "xr",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
